# installerApp

./: .gitignore  CMakeLists.txt  cmake_for_win.txt  config.cpp  config.h  config.ui  env.txt  loger.cpp  loger.h  mac_script.sh  main.cpp  mainwindow.cpp  mainwindow.h  mainwindow.ui  mainwindow.ui.autosave  parser.cpp  parser.h  parser.py  worker.cpp  worker.h
os/3K_btt_2_1_1/: install_service.sh
os/3K_btt_2_1_1/package/: aqsi-config.json  btt_downloader.service
os/3K_btt_2_1_1/package/btt_downloader/: btt_downloader.py  configure_network.sh
test/: test.cpp  test.sh
venv_python/conda-meta/: _openmp_mutex-5.1-1_gnu.json  bzip2-1.0.8-h7b6447c_0.json  ca-certificates-2023.01.10-h06a4308_0.json  certifi-2022.12.7-py310h06a4308_0.json  cffi-1.15.1-py310h5eee18b_3.json  conda-23.1.0-py310h06a4308_0.json  conda-package-handling-2.0.2-py310h06a4308_0.json  conda-package-streaming-0.7.0-py310h06a4308_0.json  ld_impl_linux-64-2.38-h1181459_1.json  libgcc-ng-11.2.0-h1234567_1.json  libgomp-11.2.0-h1234567_1.json  libuuid-1.41.5-h5eee18b_0.json  ncurses-6.4-h6a678d5_0.json  pyopenssl-22.0.0-pyhd3eb1b0_0.json  pysocks-1.7.1-py310h06a4308_0.json  python-3.10.9-h7a1cb2a_0.json  readline-8.2-h5eee18b_0.json  tzdata-2022g-h04d1e81_0.json  urllib3-1.26.14-py310h06a4308_0.json  wheel-0.37.1-pyhd3eb1b0_0.json  xz-5.2.10-h5eee18b_1.json  zlib-1.2.13-h5eee18b_0.json  zstandard-0.18.0-py310h5eee18b_0.json
venv_python/etc/profile.d/: conda.csh  conda.sh
venv_python/lib/: libffi.so.8.1.0  tclConfig.sh  tkConfig.sh
venv_python/lib/itcl4.2.2/: itclConfig.sh
venv_python/lib/pkgconfig/: formw.pc  libcrypto.pc  libffi.pc  libssl.pc  ncurses++w.pc  ncursesw.pc  openssl.pc  python-3.10-embed.pc  python-3.10.pc  readline.pc  sqlite3.pc  tk.pc
venv_python/lib/python3.10/: _sysconfigdata__linux_x86_64-linux-gnu.py.orig  _sysconfigdata_x86_64_conda_cos6_linux_gnu.py
venv_python/lib/tdbc1.1.3/: tdbcConfig.sh
venv_python/pkgs/: urls.txt
venv_python/pkgs/cache/: 3e39a7aa.json  47929eba.json
venv_python/pkgs/conda-23.1.0-py310h06a4308_0/info/: index.json  repodata_record.json
venv_python/pkgs/cryptography-38.0.4-py310h9ce1e76_0/info/: hash_input.json  paths.json
venv_python/pkgs/libgcc-ng-11.2.0-h1234567_1/lib/: libitm.so.1.0.0
venv_python/pkgs/python-3.10.9-h7a1cb2a_0/info/: about.json  paths.json  repodata_record.json
venv_python/pkgs/python-3.10.9-h7a1cb2a_0/lib/: libpython3.10.so.1.0
venv_python/pkgs/sqlite-3.40.1-h5082296_0/info/: hash_input.json  paths.json  repodata_record.json
venv_python/pkgs/zstandard-0.18.0-py310h5eee18b_0/info/: about.json  hash_input.json
venv_python/share/terminfo/M/: mt4520-rv
venv_python/share/terminfo/a/: abm85  abm85h  adm36
venv_python/share/terminfo/c/: cit101e-n132  crt
venv_python/share/terminfo/g/: go140  go225
venv_python/share/terminfo/h/: hp300h  hp700-wy  hp9845  hp98550  hpsub
venv_python/share/terminfo/n/: ncsa-vt220  news-29-sjis  news-33  news-33-euc  news-42-euc  news28
venv_python/share/terminfo/o/: opus3n1+  otek4115
venv_python/share/terminfo/p/: pcvt25-color  pcvt35w  pcvt40  pcvt40w  pcvt43
venv_python/share/terminfo/t/: tvi9065  tvi910  tvi912b-unk  tvi912cc  tvi920b  tvi920b-2p-mc  tvi920b-vb  tvi924  tvipt
venv_python/share/terminfo/u/: uts30
venv_python/share/terminfo/v/: versaterm  vt220-base  vt220d  vt340  vt510pc  (+2 more)
(+95 files in other folders)
